fix(ui): globally hide scrollbars for pwa mobile experience

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,15 +46,15 @@ html.dark body {
   animation: heartbeat 1.5s infinite;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.no-scrollbar::-webkit-scrollbar {
+/* Globally hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
   display: none;
   width: 0px;
   background: transparent;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.no-scrollbar {
+/* Globally hide scrollbar for IE, Edge and Firefox */
+* {
   -ms-overflow-style: none;
   /* IE and Edge */
   scrollbar-width: none;
